fix: fix scrollbar issue for #12

--- a/src/app/shared/components/markdown-render/markdown-render.component.scss
+++ b/src/app/shared/components/markdown-render/markdown-render.component.scss
@@ -1,15 +1,22 @@
 :host {
   position: relative;
+  box-sizing: border-box;
 }
 
 .markdown-toc {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  overflow-y: scroll;
+
   .left-drawer {
-    width: 15%;
-    min-width: 120px;
-    min-height: 100vh;
+    width: 20%;
+    min-width: 160px;
+    height: calc(100vh - 66px);
   }
 
   .right-content {
+    width: 100%;
   }
 }
 
@@ -20,9 +27,10 @@
 
 .sticky {
   position: fixed;
-  overflow: scroll;
+  overflow-y: scroll;
   z-index: 10;
-  height: calc(100vh - 66px);
+  top: 0;
+  height: 100vh;
 }
 
 .scroll-to-top {
